k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-webpage
spec:
  type: LoadBalancer

  selector:
    app: my-webpage

  ports:
    - port: 80
      targetPort: 80
