k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-webpage
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - myweb.local
      secretName: myweb-tls

  rules:
    - host: myweb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-webpage
                port:
                  number: 80
